# rust-commit-tracker

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  tracker.rs
src/models/: commit.rs  discord.rs  mod.rs
src/services/: database.rs  discord.rs  mod.rs  scraper.rs
