[package]
name = "rust-commit-tracker"
version = "0.2.0"
edition = "2024"
description = "A Rust application that monitors Facepunch's Rust game commits and sends Discord notifications"
license = "MIT"
repository = "https://github.com/kWAYTV/rust-commit-tracker"
homepage = "https://github.com/kWAYTV/rust-commit-tracker"
documentation = "https://github.com/kWAYTV/rust-commit-tracker#readme"
keywords = ["rust", "discord", "notifications", "commits", "monitoring"]
categories = ["command-line-utilities", "web-programming"]
authors = ["kWAYTV"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.16", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
